# sha256

./: CMakeLists.txt  README.md  main.cpp
src/: sha.h
tests/: sha_2.cpp  test_cases.txt  test_cases_double.txt
